Fix gitignore to allow mappings and ignore __pycache__

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,8 @@
 !code_adlo_2lev_seaice_update
 !input_adhi
 !input_adlo
+
+# Allow mappings Python source, but not caches
+!mappings/
+mappings/__pycache__/
 !mappings/*.py
